Estructuro a un nivel muy basico la memoria

--- a/Documento/Makefile
+++ b/Documento/Makefile
@@ -10,8 +10,9 @@ pdf:
 	@pdflatex Trabajo.tex
 
 clean:
-	@rm *.log
-	@rm *.aux
+	@rm -f *.log
+	@rm -f *.aux
+	@rm -f *.toc
 
 deepclean:
 	@make clean
